# financial-asset-relationship-db

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.json  1_Test Python 3.10.txt  2_Test Python 3.8.txt  2_Test Python 3.9.txt  3_Test Python 3.11.txt  4_Test Python 3.8.txt  4_Test Python 3.9.txt  5_Test Python 3.12.txt  ADDITIONAL_TESTS_SUMMARY.md  ADDITIONAL_WORKFLOW_TESTS_SUMMARY.md  AI_RULES.md  ARCHITECTURE.md  AUDIT_REPORT.md  BRANCH_CLEANUP_ANALYSIS.md  BRANCH_CLEANUP_QUICK_REFERENCE.md  BRANCH_CLEANUP_SUMMARY.md  CHANGELOG.md  CHANGELOG_BRANCH_CLEANUP.md  COMMIT_MESSAGE.md  COMPLETE_TEST_GENERATION_REPORT.md  COMPREHENSIVE_ADDITIONAL_TESTS_SUMMARY.md  COMPREHENSIVE_TEST_GENERATION_REPORT.md  COMPREHENSIVE_TEST_SUMMARY.md  CONTRIBUTING.md  DATABASE.md  DEPENDENCY_IMPROVEMENTS.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  ENHANCED_TEST_SUMMARY.md  FINAL_ADDITIONAL_TESTS_REPORT.md  FINAL_COMPREHENSIVE_TEST_GENERATION_SUMMARY.md  FINAL_REPORT.txt  FINAL_REVIEW_RESOLUTION.md  FINAL_TEST_GENERATION_SUCCESS_SUMMARY.md  (+71 more)
.circleci/: config.yml
.elastic-copilot/memory/: activeContext.md  dependencyMatrix.md  implementationPlan.md  learningJournal.md  progress.md  systemManifest.md
.github/: BRANCH_INFO.md  PR_AGENT_README.md  copilot-instructions.md  copilot-pr-agent.md  labeler.yml  pr-agent-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: branch_cleanup.md
.github/instructions/: codacy.instructions.md
.github/scripts/: README.md  context_chunker.py
.github/workflows/: apisec-scan.yml  bandit.yml  branch-cleanup.yml  ci.yml  codacy.yml  codeql.yml  contrast-scan.yml  debricked.yml  dependency-review.yml  devskim.yml  docker-image.yml  docker-publish.yml  docker.yml  dotnet-desktop.yml  frogbot-scan-and-fix.yml  frogbot-scan-pr.yml  go.yml  greetings.yml  hadolint.yml  jfrog-github-oidc-example.yml  label.yml  nextjs.yml  njsscan.yml  node.js.yml  npm-publish.yml  ossar.yml  osv-scanner.yml  pmd.yml  pr-agent.yml  pylint.yml  pyre.yml  pysa.yml  (+10 more)
Test Python 3.10/: 1_Set up job.txt  2_Checkout repository.txt  2_Run CI common for Python 3.10.txt  3_Run CI common for Python 3.10.txt  4_Complete job.txt  7_Post Run CI common for Python 3.10.txt  8_Post Checkout repository.txt  9_Complete job.txt  system.txt
Test Python 3.11/: 1_Set up job.txt  2_Checkout repository.txt  2_Run CI common for Python 3.11.txt  3_Run CI common for Python 3.11.txt  4_Complete job.txt  4_Upload coverage to Codecov.txt  7_Post Run CI common for Python 3.11.txt  8_Post Checkout repository.txt  9_Complete job.txt  system.txt
Test Python 3.12/: 1_Set up job.txt  2_Checkout repository.txt  2_Run CI common for Python 3.12.txt  3_Run CI common for Python 3.12.txt  4_Complete job.txt  7_Post Run CI common for Python 3.12.txt  8_Post Checkout repository.txt  9_Complete job.txt  system.txt
Test Python 3.8/: 1_Set up job.txt  2_Checkout repository.txt  2_Run CI common for Python 3.8.txt  3_Run CI common for Python 3.8.txt  4_Complete job.txt  7_Post Run CI common for Python 3.8.txt  8_Post Checkout repository.txt  9_Complete job.txt  system.txt
Test Python 3.9/: 1_Set up job.txt  2_Checkout repository.txt  2_Run CI common for Python 3.9.txt  3_Run CI common for Python 3.9.txt  4_Complete job.txt  7_Post Run CI common for Python 3.9.txt  8_Post Checkout repository.txt  9_Complete job.txt  system.txt
api/: __init__.py  auth.py  database.py  main.py
branch_reviews/: gitauto-issue-133-review.md
frontend/: .gitignore  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json
migrations/: 001_initial.sql
tests/: README.md  __init__.py  conftest.py
(+91 files in other folders)
